# ros2_learn

./: frames_2024-12-30_15.28.29.gv  frames_2025-01-04_11.50.47.gv  main.cpp  try.urdf
src/action_tutorials_cpp/: CMakeLists.txt  package.xml
src/action_tutorials_cpp/src/: fibonacci_action_client.cpp  fibonacci_action_server.cpp
src/composable_node/: CMakeLists.txt  package.xml
src/composable_node/launch/: launch.py
src/composable_node/src/: pub.cpp  sub.cpp
src/cpp_parameters/: CMakeLists.txt  package.xml
src/cpp_parameters/src/: cpp_parameters_node.cpp  test_param.cpp
src/getpos/: CMakeLists.txt  package.xml
src/getpos/src/: getpos.cpp
src/launch_tutorial/: CMakeLists.txt  package.xml
src/launch_tutorial/launch/: example_main_launch.yaml  example_substitutions_launch.yaml
src/learning_tf2_cpp/: CMakeLists.txt  package.xml
src/learning_tf2_cpp/launch/: dynamic_launch.py  fixed_launch.py  launch.py
src/learning_tf2_cpp/src/: turtle_tf2_listener.cpp  turtle_tf2_listener_debug.cpp
src/my_interface/: CMakeLists.txt  package.xml
src/my_interface/msg/: CallMe.msg
src/opencv_find/: CMakeLists.txt  package.xml
src/opencv_find/src/: opencv_imshow.cpp
src/polygon_base/: CMakeLists.txt  package.xml
src/polygon_plugins/: package.xml
src/pub_point_sphere/: CMakeLists.txt  package.xml
src/pub_point_sphere/src/: action_service.cpp  client.cpp  main.cpp  service.cpp  sub.cpp
src/sub_pub_video/: CMakeLists.txt  package.xml
src/sub_pub_video/launch/: launch.yaml
src/sub_pub_video/src/: publisher.cpp  subscriber.cpp
src/urdf_tutorial_r2d2/: package.xml  setup.py
